feat(fileService): added findVersions